--- a/Azure.Screenshots/Azure.Screenshots.Core/packages.config
+++ b/Azure.Screenshots/Azure.Screenshots.Core/packages.config
@@ -5,5 +5,5 @@
   <package id="MvvmCross.Core" version="5.4.2" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Platform" version="5.4.2" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Xamarin.Forms" version="2.5.0.91635" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Forms" version="3.0.0.201-gtk" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
